--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html> <html lang="es"> <head>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
-    <meta charset="UTF-8"> <title>Sevlo | Cosméticos</title> <link rel="stylesheet" href="style.css"> </head>
+    <meta charset="UTF-8"> <title>Sevlo | Cosméticos</title> <link rel="stylesheet" href="style.css"><link rel="icon" type="image/jpg" href="imagenes/Logo.jpg"> </head>
 <body> <header>
     <img src="imagenes/Logo.jpg" alt="Logo Sevlo" class="logo">
     <p>Cuidado y Belleza</p>
